--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -963,9 +963,10 @@ section,
 .portfolio .portfolio-content .portfolio-info .preview-link,
 .portfolio .portfolio-content .portfolio-info .details-link {
   position: absolute;
-  left: calc(50% - 40px);
   font-size: 26px;
-  top: calc(50% - 14px);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   color: #fff;
   transition: 0.3s;
   line-height: 1.2;
